Fix scrollbars and ontology search appearance for Firefox

--- a/src/app/modules/ontology-exploration/ontology-search/ontology-search.component.scss
+++ b/src/app/modules/ontology-exploration/ontology-search/ontology-search.component.scss
@@ -48,8 +48,9 @@
   .results-container {
     width: 380px;
     margin-bottom: 1rem;
-    overflow: overlay;
+    overflow: auto;
     max-height: 15rem;
+    scrollbar-width: thin;
 
     mat-option {
       height: 1.5rem;
